Add seed for languages

--- a/.env.development
+++ b/.env.development
@@ -22,3 +22,6 @@ DATABASE_PASSWORD=1111
 DATABASE_NAME=lms
 
 BASE_URL=http://localhost:3001
+NODE_ENV=development
+LOG_LEVEL=debug
+LOG_FILE=info.log
