--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,8 @@ DATABASE_PORT=5432
 DATABASE_USERNAME=postgres
 DATABASE_PASSWORD=1111
 DATABASE_NAME=lms
+
+BASE_URL=http://localhost:3001
+NODE_ENV=development
+LOG_LEVEL=debug
+LOG_FILE=info.log
