--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "crypto-js": "^4.2.0",
+    "express-rate-limit": "^7.4.0",
     "luxon": "^2.3.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.10",
